# operating-systems-and-networks-project

./: .gitignore  1.txt  CMakeCache.txt  CMakeLists.txt  FIGURE.md  Makefile  README.md  TODO.md  cmake_install.cmake  lego_client
.run/: all.run.xml  lego-client.run.xml  lego-common.run.xml  lego-proxy.run.xml  lego-server.run.xml
Logged/: log.txt
certs/: proxy.pem  server.pem
figures/: unicorn.html
lego-client/: CMakeLists.txt  README.md
lego-client/main/include/common/: Logger.hpp
lego-client/main/include/controller/: FigureController.hpp
lego-client/main/include/data/: FigureRepository.hpp
lego-client/main/include/model/: Figure.hpp
lego-client/main/include/net/: HttpsClient.hpp
lego-client/main/include/net/socket/: Ipv4SslSocket.hpp  SslCtxPtr.hpp  SslPtr.hpp
lego-client/main/src/: LegoClient.cpp
lego-client/main/src/common/: Logger.cpp
lego-client/main/src/controller/: FigureController.cpp
lego-client/main/src/data/: FigureRepository.cpp
lego-client/main/src/model/: Figure.cpp
lego-client/main/src/net/: HttpsClient.cpp
lego-client/main/src/net/socket/: Ipv4SslSocket.cpp  SslCtxPtr.cpp  SslPtr.cpp
lego-common/main/include/concurrency/: Semaphore.hpp
lego-common/main/include/controller/: ProtocolController.hpp
lego-common/main/include/logging/: Logger.hpp
lego-intermediate/: todo.md
lego-proxy/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
lego-proxy/main/src/: LegoProxy.cpp
lego-server/: CMakeLists.txt  README.md  TODO.md  ci0123.pem  todo.md
lego-server/dummyTest/: test.cpp
lego-server/main/include/common/: Logger.hpp  Queue.hpp  Semaphore.hpp
lego-server/main/include/controller/: FigureController.hpp  FigureProtocolController.hpp  FigureSslController.hpp
lego-server/main/include/data/: FigureHtmlRepository.hpp
lego-server/main/include/net/: FigureHttpsServer.hpp  FigureSslServer.hpp  HttpsServer.hpp
lego-server/main/include/net/socket/: IPv4SslSocket.hpp  Ipv4SslSocket.hpp  Ipv4SslSocket_old.hpp  Socket.hpp  SocketException.hpp  SslCtxPtr.hpp  SslPtr.hpp
lego-server/main/src/: LegoServer.cpp  ci0123.pem
lego-server/main/src/common/: Logger.cpp  Semaphore.cpp
lego-server/main/src/controller/: FigureController.cpp  FigureProtocolController.cpp  FigureSslController.cpp
lego-server/main/src/data/: FigureHtmlRepository.cpp
lego-server/main/src/net/: FigureHttpsServer.cpp  FigureSslServer.cpp  HttpsServer.cpp
lego-server/main/src/net/socket/: IPv4SslSocket.cpp  Ipv4SslSocket.cpp  Ipv4SslSocket_old.cpp  Socket.cpp  SocketException.cpp  SslCtxPtr.cpp  SslPtr.cpp
lego-server/res/: blacksheep.html  dragon.html  duck.html  elephant.html  fish.html  giraffe.html  horse.html  lion.html  monkey.html  penguin.html  roadrunner.html  shark.html  squid.html  swan.html  turtle.html  unicorn.html  whitesheep.html
nachos-client/: Makefile.common  README.md  main.c
nachos-client/NachOSx64/code/: README.md  nachos.2
nachos-client/filesys/: Makefile  filehdr.h  nachos
nachos-client/machine/: console.cc  disk.h
nachos-client/network/: Makefile  nachos
nachos-client/test/: addrspacetest.c  client  client.c  client.coff  halt  matmult
nachos-client/threads/: Makefile  main.cc  nachos  preemptive.cc  preemptive.h  synch.cc  synch.h  thread.h
nachos-client/userprog/: Makefile  bitmap.h  filetable.cc  filetable.h  memorymanager.cc  memorymanager.h  nachos  semtable.cc  semtable.h  socket.cc  syscall.h
nachos-client/vm/: Makefile  nachos
src/main/: Client.cpp  LegoClient.cpp
(+87 files in other folders)
